--- a/src/app.css
+++ b/src/app.css
@@ -301,6 +301,7 @@ a {
     -ms-grid-column: auto auto;
     grid-column: auto auto;
     top: 200px;
+    background: #FFFFFF;
 }
 .body-context-a {
     position: absolute;
@@ -555,4 +556,264 @@ a {
 }
 .body-platform-icon {
     margin: 30px;
+}
+.body-last {
+    position: absolute;
+    width: 100%;
+    height: 340px;
+    left: 0px;
+    top: 3608px;
+    display: flex;
+    background: #F5F5F5;
+}
+.body-last-text {
+    position: absolute;
+    width: 643px;
+    height: 100px;
+    left: 80px;
+    top: 120px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 50px;
+    /* or 139% */
+    
+    letter-spacing: -0.015em;
+    
+    color: rgba(0, 0, 0, 0.8);
+}
+.body-last-login {
+    position: absolute;
+    width: 192px;
+    height: 52px;
+    left: 807px;
+    top: 144px;
+    background: #18A0FB;
+    border-radius: 6px;
+}
+.body-last-login a {
+    position: absolute;
+    left: 36.15%;
+    right: 26.97%;
+    top: 29.42%;
+    bottom: 30.19%;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 21px;
+    /* identical to box height */
+    
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.015em;
+    
+    color: #FFFFFF;
+}
+.body-last-register {
+    position: absolute;
+    width: 192px;
+    height: 52px;
+    left: 1044px;
+    top: 144px;
+    background: #FFFFFF;
+    /* Actionable Item */
+    
+    border: 1px solid #18A0FB;
+    box-sizing: border-box;
+    border-radius: 6px;
+}
+.body-last-register a {
+    position: absolute;
+    left: 36.15%;
+    right: 26.45%;
+    top: 29.42%;
+    bottom: 30.19%;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 21px;
+    /* identical to box height */
+    
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: -0.015em;
+    
+    /* Actionable Item */
+    
+    color: #18A0FB;
+}
+.footer {
+    position: absolute;
+    width: 100%;
+    height: 501px;
+    left: 0px;
+    top: 4000px;
+    
+    background: #FFFFFF;
+}
+.footer-nav {
+    display: flex;
+    top: 100px;
+}
+.footer-nav-mobile {
+    position: absolute;
+    width: 173px;
+    height: 24px;
+    left: 160px;
+    top: 120px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height, or 160% */
+    
+    letter-spacing: -0.015em;
+    
+    color: #000000;
+}
+.footer-nav-mobile a {
+    color: #000000;
+}
+.footer-nav-solution {
+    position: absolute;
+    width: 173px;
+    height: 24px;
+    left: 353px;
+    top: 120px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height, or 160% */
+    
+    letter-spacing: -0.015em;
+    
+    color: #000000;
+}
+.footer-nav-solution a {
+    color: #000000;
+}
+.footer-nav-about {
+    position: absolute;
+    width: 173px;
+    height: 24px;
+    left: 504px;
+    top: 120px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height, or 160% */
+    
+    letter-spacing: -0.015em;
+    
+    color: #000000;
+}
+.footer-nav-about a {
+    color: #000000;
+}
+.footer-nav-index {
+    position: absolute;
+    height: 32px;
+    left: 679px;
+    top: 120px;    
+}
+.footer-nav-support {
+    position: absolute;
+    width: 173px;
+    height: 24px;
+    left: 743px;
+    top: 120px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height, or 160% */
+    
+    text-align: right;
+    letter-spacing: -0.015em;
+    
+    color: #000000;
+}
+.footer-nav-support a {
+    color: #000000;
+}
+.footer-nav-email {
+    position: absolute;
+    width: 173px;
+    height: 24px;
+    left: 886px;
+    top: 120px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height, or 160% */
+    
+    text-align: right;
+    letter-spacing: -0.015em;
+    
+    color: #000000;
+}
+.footer-nav-email a {
+    color: #000000;
+}
+.footer-nav-policy {
+    position: absolute;
+    width: 173px;
+    height: 24px;
+    left: 1027px;
+    top: 120px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height, or 160% */
+    
+    text-align: right;
+    letter-spacing: -0.015em;
+    
+    color: #000000;
+}
+.footer-nav-policy a {
+    color: #000000;
+}
+.hr {
+    position: absolute;
+    width: 1220px;
+    height: 1px;
+    left: 80px;
+    top: 192px;
+    
+    background: rgba(0, 0, 0, 0.5);
+}
+.footer-social {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    top: 300px;
+    left: 570px;
+}
+.github, .twitter, .medium, .instagram {
+    margin: 10px;
+}
+.copyright {
+    position: absolute;
+    width: 301px;
+    height: 24px;
+    left: 549px;
+    top: 377px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height, or 160% */
+    
+    text-align: center;
+    letter-spacing: -0.015em;
+    
+    color: rgba(0, 0, 0, 0.8);
+    
 }
